<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_consent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--Next 3 guidelines describe the default margins that the visible elements are constrained to-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/setup_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/setup_bottom_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/left_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/right_margin_percentage" />

    <!--Alexa logo-->

    <!-- Title text-->
    <TextView
        android:id="@+id/location_permission_header_view"
        style="?attr/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="158dp"
        android:text="@string/location_permission_header_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Subtitle text-->
    <TextView
        android:id="@+id/location_permission_text_view"
        style="?attr/bodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/location_permission_body_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/location_permission_header_view"
        android:layout_marginTop="@dimen/title_to_subtitle_margin"/>

    <!--Hint text-->
    <TextView
        android:id="@+id/alexa_hint2"
        style="?attr/utteranceText"
        android:text="@string/location_permission_hint_text"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_permission_text_view"
        app:layout_constraintBottom_toTopOf="@id/setup_skip_button_view"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"/>

    <!-- Skip location consent button-->
    <TextView
        android:id="@+id/setup_skip_button_view"
        style="?attr/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_permission_button_text"
        app:layout_constraintBottom_toTopOf="@id/setup_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/use_location_button_view"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <!-- Use location button-->
    <TextView
        android:id="@+id/use_location_button_view"
        style="?attr/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consent_agree_text"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/setup_skip_button_view" />


</androidx.constraintlayout.widget.ConstraintLayout>