<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enable_preview_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">
    <!--Next 3 guidelines describe the default margins that the visible elements are constrained to-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/setup_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/setup_bottom_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/left_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/right_margin_percentage" />

    <!--Alexa logo-->

    <!--Title text-->
    <TextView
        android:id="@+id/enable_preview_mode_header"
        style="?attr/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="158dp"
        android:text="@string/enable_preview_mode_header"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle text-->
    <TextView
        android:id="@+id/enable_preview_mode_text_view"
        style="?attr/bodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enable_preview_mode_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/enable_preview_mode_header"
        android:layout_marginTop="@dimen/title_to_subtitle_margin"/>

    <!--Disclaimer text-->
    <TextView
        android:id="@+id/enable_preview_mode_disclaimer"
        style="?attr/smallBoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enable_preview_mode_disclaimer"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/enable_preview_mode_action_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/enable_preview_mode_text_view" />

    <ProgressBar
        android:id="@+id/enable_preview_mode_progress_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <!-- Agree button-->
    <TextView
        android:id="@+id/enable_preview_mode_action_button"
        style="?attr/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_preview_mode_action_button"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>