<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/block_setup_on_drive_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workflow.fragment.DriveBlockSetupFragment">

    <!--Next 3 guidelines describe the default margins that the visible elements are constrained to-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/setup_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/setup_bottom_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/left_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/right_margin_percentage" />

    <!--Alexa logo-->
    <ImageView
        android:id="@+id/alexa_img_view"
        android:layout_width="@dimen/login_alexa_image_width"
        android:layout_height="@dimen/login_alexa_image_height"
        android:layout_gravity="center"
        android:contentDescription="@string/alexa_logo_content_description"
        android:src="@drawable/alexa_logo"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/block_setup_on_drive_text_view"
        style="@style/Alexa.TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/block_setup_on_drive_text"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/alexa_img_view"
        android:layout_marginTop="@dimen/login_item_margin_top"/>

    <TextView
        android:id="@+id/block_setup_on_drive_back_btn"
        style="@style/Alexa.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>