<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/network_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--Next 3 guidelines describe the default margins that the visible elements are constrained to-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/setup_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/setup_bottom_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/left_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/right_margin_percentage" />

    <!--Alexa logo-->

    <!--Title text-->
    <TextView
        android:id="@+id/network_error_header"
        style="?attr/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:text="@string/login_network_error_heading_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Subtitle text-->
    <TextView
        android:id="@+id/network_error_body"
        style="?attr/bodyText"
        android:text="@string/login_network_error_body_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/network_error_header"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="@dimen/title_to_subtitle_margin"/>

    <!-- Image-->
    <ImageButton
        android:id="@id/network_error_image"
        android:layout_width="@dimen/network_error_img_width"
        android:layout_height="@dimen/network_error_img_height"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_wifi_help"
        android:tint="#FFFFFF"
        android:alpha="0.4"
        app:layout_constraintBottom_toTopOf="@id/network_settings_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/network_error_body" />

    <!--Network Settings button-->
    <TextView
        android:id="@+id/network_settings_button"
        style="?attr/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_network_settings"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>